--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -3,7 +3,7 @@
         rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@algolia/autocomplete-theme-classic"
     />
-    <link rel="stylesheet" href="/css/pos.css" />
+    <link rel="stylesheet" href="/css/items.css" />
 </head>
 
 <body>
@@ -12,7 +12,7 @@
     <div class="header top-row row">
         <div class="col-6 g=0">
             <nav>
-                <h1 id="<%= order._id %>"><div class="fw-bold">Order #<%= order._id %></div></h1>
+                <h1><div class="fw-bold">Item Database</div></h1>
             </nav>
         </div>
         <div class="col-6">
@@ -134,28 +134,21 @@
         <table id="orderDetails" class="table table-fixed table-hover">
           <thead>
             <tr>
-<th class="mobile-col col-sm-4">Item</th><th class="mobile-col col-sm-2">Price</th><th class="mobile-col col-sm-2">Tax</th><th class="mobile-col col-sm-2">Qty</th><th class="mobile-col col-sm-2">Total</th>
+<th class="mobile-col col-sm-4">Item</th><th class="mobile-col col-sm-2">Price</th><th class="mobile-col col-sm-4">Tax</th><th class="mobile-col col-sm-2">Total</th>
             </tr>
           </thead>
           <tbody>
-            <% for (let i = 0; i < order.children.length; i++) { %>
-            <% let item = order.children[i] %>
-            <tr id="<%= item._id %>" class="<%=item.code%> <%= i === order.children.length -1 ? 'table-active' : ''%>">
+            <% for (let i = 0; i < items.length; i++) { %>
+            <% let item = items[i] %>
+            <tr id="<%= item._id %>" class="<%=item.code%> <%= i === items.length -1 ? 'table-active' : ''%>">
             <td class="col-sm-4"><%= item.name %></td>
             <td class="col-sm-2"><%= currency %><%= item.price %></td>
-            <td class="col-sm-2"><%= currency %><%= item.tax %></td>
-            <td class="col-sm-2"><%= item.quantity %></td>
+            <td class="col-sm-4"><%= currency %><%= item.tax %></td>
             <td class="col-sm-2"><%= currency %><%= Big(item.price).add(Big(item.tax)).times(item.quantity).toFixed(2) %></td>
             </tr>
             <% } %>
           </tbody>
           <tfoot>
-            <tr class="d-flex justify-content-between">
-            <td class="tablefoot"><div class="fw-bold">Items:</div> <%= order.children.reduce((a,b) => a + b.quantity,0) %></td>
-            <td class="tablefoot"><div class="fw-bold">Subtotal:</div><%= currency %><%= order.subtotal %></td>
-            <td class="tablefoot"><div class="fw-bold">Tax:</div><%= currency %><%= order.tax %></td>
-            <td class="tablefoot"><div class="fw-bold">Balance:</div><%= currency %><span id="orderTotal"><%= order.total %></span></td>
-            </tr>
           </tfoot>
         </table>
       </div>
@@ -170,23 +163,24 @@
         <div class="item-info col-6 d-flex flex-column justify-content-between">
 
             <div class="card">
-                <% itemDetails = order.children[(order.children.length-1)] %>
+                <% itemDetails = items[(items.length-1)] %>
                 <div class="card-body">
                 <h2 id="<%= itemDetails ? itemDetails._id : ""%>"><div class="fw-bold">Item Details</div></h2>
                 <p class="details"><span class="fw-bold">Name: </span><span id="itemName"><%= itemDetails ? itemDetails.name : "" %></span></p>
                 <p class="details"><span class="fw-bold">Code: </span><span id="itemCode"><%= itemDetails ? itemDetails.code : "" %></span></p>
-                <p class="details"><span class="fw-bold">Quantity: </span><span id="itemQuantity"><%= itemDetails ? itemDetails.quantity : "" %></span></p>
+                <div>
                 <p class="details"><span class="fw-bold">Price:</span> <span class="currency"><%= itemDetails ? currency : '' %></span><span id="itemPrice"><%= itemDetails ? itemDetails.price : "" %></span></p>
                 <p class="details"><span class="fw-bold">Tax:</span> <span class="currency"><%= itemDetails ? currency : '' %></span><span id="itemTax"><%= itemDetails ? itemDetails.tax : "" %></span></p>
                 <p class="details"><span class="fw-bold">Total:</span> <span class="currency"><%= itemDetails ? currency : '' %></span><span id="itemTotal"><%= itemDetails ? Big(itemDetails.price).plus(Big(itemDetails.tax)).times(Big(itemDetails.quantity)).toFixed(2) : "" %></span></p>
+                </div>
                 <div class="row flex-nowrap">
-                <form class="col-2-md col-3" id="voidItem" action="/pos/voidItem/<%= order._id %>/<%= order.children.length ? itemDetails._id : 'x' %>/?_method=PUT" method="POST">
+                <form class="col-2-md col-3" id="voidItem" action="/pos/voidItem/<%=  %>/<%= items.length ? itemDetails._id : 'x' %>/?_method=PUT" method="POST">
                     <button class=" btn btn-primary itemButton" type="submit">Void Item</button>
                 </form>
-                <form class="col-2-md col-3" id="voidLine" action="/pos/voidLine/<%= order._id %>/<%= order.children.length ? itemDetails._id : 'x' %>/?_method=PUT" method="POST">
+                <form class="col-2-md col-3" id="voidLine" action="/pos/voidLine/<%= %>/<%= items.length ? itemDetails._id : 'x' %>/?_method=PUT" method="POST">
                     <button class=" btn btn-primary itemButton" type="submit">Void Line</button>
                 </form>
-                <form class="col-6" id="priceOverride" action="/pos/priceOverride/<%= order._id %>/<%= order.children.length ? itemDetails._id : 'x' %>/?_method=PUT" method="POST">
+                <form class="col-6" id="priceOverride" action="/pos/priceOverride/<%= %>/<%= items.length ? itemDetails._id : 'x' %>/?_method=PUT" method="POST">
                     <div class="input-group flex-nowrap unpadSides">
                     <input class="form-control" id="overridePrice" required name="price" type="number" step="0.01" min="0" max="9999.99" placeholder="0.00">
                     <button class="btn btn-primary overrideButton" type="submit">Price Override</button>
@@ -204,7 +198,7 @@
 
 <div class="card removeBorder">
 <div class="card-body unpadSides">
-<form action="/pos/addItemToOrder/<%= order._id %>?_method=PUT" method="POST">
+<form action="/pos/addItemToOrder/<%= %>?_method=PUT" method="POST">
     <!-- <label for="searchInput" class="form-label">Search</label> -->
     <div class="input-group flex-nowrap">
           <div id="autocomplete"></div>
@@ -268,19 +262,19 @@
                 </div>
 
 
-                <form action="/pos/completeOrder/<%= order._id %>?_method=PUT" method="POST">
+                <form action="/pos/completeOrder/<%=  %>?_method=PUT" method="POST">
                     <button type="submit" class="btn btn-success">Complete Order</button>
                 </form>
                 </div>
                 <div class="collapse" id="cardCollapse" data-bs-parent=".modal-body">
-                <% if (stripeKey === true) { %>
+                <% if (true) { %>
                 <div class="row justify-content-center">
                 <p id="cardDisplay" class="text-center"></p>
                 <div id="qrDisplay"></div>
                 </div>
                 <button type="button" class="btn btn-secondary mx-auto d-block" id="getQrCode">Generate Payment Code</button>
 
-                <form action="/pos/completeOrder/<%= order._id %>?_method=PUT" method="POST">
+                <form action="/pos/completeOrder/<%=  %>?_method=PUT" method="POST">
                     <button type="submit" id="cardComplete" class="hidden mx-auto btn btn-success">Complete Order</button>
                 </form>
                 <% } else { %>
@@ -320,6 +314,6 @@
   const { autocomplete } = window['@algolia/autocomplete-js'];
 </script>
 
-<script src="/js/pos.js"></script>
+<script src="/js/items.js"></script>
 
 <%- include('partials/footer') -%>
