--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Magical Merchant</title>
+    <meta property="og:title" content="Magical Merchant" />
+    <meta property="og:url" content="https://magical-merchant.herokuapp.com/" />
+    <meta property="og:image" content="https://magical-merchant.herokuapp.com/thumbnail.png" />
+
+
     <link
       rel="icon"
       type="image/png"
